# TPAutoCorrect

./: .gitignore  PULL_REQUEST.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_dist.yml  coverage.yml  docs.yml  tests.yml
Example/SimpleTP/: .gitignore  auto_correct.py  main.py  pyproject.toml  requirements.txt
Example/SimpleTP/base_tests/: conftest.py  test_a_class.py  test_functions.py
Example/SimpleTP/master_tests/: test_a_class.py  test_functions.py
Example/SimpleTP/src/: a_class.py  functions.py
Example/SimpleTP/supp_tests/: conftest.py  test_functions.py
Example/SimpleTP/tests/: test_a_class.py  test_functions.py
src/tac/: __init__.py  __main__.py  grade.py  homework.py  homework_utils.py  perf_test_case.py  report.py  source.py  tester.py  utils.py
tests/: configs.py  test_init.py
