[project]
name = "tpautocorrect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitpython>=3.1.46",
    "numpy>=2.4.0",
    "pycodestyle>=2.14.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "pythonbasictools>=0.0.3",
]
