[project]
name = "TAC"
version = "0.1.0"
description = ""
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.9, <3.15"
dependencies = [
  "gitpython>=3.1.46",
  "numpy (>=1.23,<3.0.0)",
  "pycodestyle>=2.14.0",
  "pytest>=8.3.5,<10",
  "pytest-cov>=7.0.0",
  "pytest-json-report>=1.5.0",
  "pythonbasictools>=0.0.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "mypy>=1.19.1",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[[tool.mypy.overrides]]
module = [
    "pythonbasictools",
    "pycodestyle",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
