[project]
name = "simpletp"
version = "0.1.0"
description = "simpletp"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "PythonBasicTools>=0.0.1a10",
  "pytest>=8.3.5",
  "pytest-cov>=7.0.0",
  "pytest-json-report>=1.5.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=7.0.0", "pytest-json-report>=1.5.0"]
